// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ManageServersRowDropdown /> > renders expected size and icon 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="dropdown-btn__toggle btn btn-primary btn-sm"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-ellipsis-vertical px-1"
        data-icon="ellipsis-vertical"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 128 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="w-100 dropdown-menu dropdown-menu-end"
      data-bs-popper="static"
      role="menu"
      style="min-width: 210px;"
      tabindex="-1"
    />
  </div>
  <span>
    DeleteServerModal 
    [CLOSED]
  </span>
</div>
`;

exports[`<ManageServersRowDropdown /> > renders expected size and icon 2`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="dropdown-btn__toggle btn btn-primary btn-sm"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-ellipsis-vertical px-1"
        data-icon="ellipsis-vertical"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 128 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="w-100 dropdown-menu dropdown-menu-end"
      data-bs-popper="static"
      role="menu"
      style="min-width: 170px;"
      tabindex="-1"
    />
  </div>
  <span>
    DeleteServerModal 
    [CLOSED]
  </span>
</div>
`;
